--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,6 @@
-[core]
-	excludesfile = ~/.gitignore
-	editor = nvim
-	ignorecase = false
+[user]
+        email = chinchin.anawach@gmail.com
+        name = Chinchin
 [push]
   default = simple
 [color]
@@ -12,19 +11,16 @@
   grep = auto
   ui = auto
 [alias]
-  a = "!git status --short | peco | awk '{print $2}' | xargs git add"
+  aa = add .
   d = diff
   co = checkout
   ci = commit
   ca = commit -a
-  ps = "!git push origin $(git rev-parse --abbrev-ref HEAD)"
-  pl = "!git pull origin $(git rev-parse --abbrev-ref HEAD)"
   st = status
   br = branch
   ba = branch -a
   bm = branch --merged
   bn = branch --no-merged
-  df = "!git hist | peco | awk '{print $2}' | xargs -I {} git diff {}^ {}"
   lp = log --pretty=format:\"%Cgreen%h %Creset%cd %Cblue[%cn] %Creset%s%C(yellow)%d%C(reset)\" --graph --date=relative --decorate --all
   llog = log --graph --name-status --pretty=format:\"%C(red)%h %C(reset)(%cd) %C(green)%an %Creset%s %C(yellow)%d%Creset\" --date=relative
   open = "!hub browse"
@@ -35,23 +31,25 @@
   edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; vim `f`"
   # add conflicted file on merge
   add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
-
+        rma = "remote add origin"
+        pa = "push --all"
+        pt = "push --tags"
 [hub]
   protocol = https
 [github]
-	user = craftzdog
+        user = chinhchin
 [diff]
   tool = nvimdiff
 [difftool "nvimdiff"]
-	cmd = nvim -d \"$LOCAL\" \"$REMOTE\"
-	path = 
+        cmd = nvim -d \"$LOCAL\" \"$REMOTE\"
+        path =
 [mergetool "nvimdiff"]
-	cmd = nvim -d \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+        cmd = nvim -d \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+        trustExitCode = true
 [filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	required = true
-	process = git-lfs filter-process
+        clean = git-lfs clean -- %f
+        smudge = git-lfs smudge -- %f
+        required = true
+        process = git-lfs filter-process
 [ghq]
-  root = ~/.ghq
+        root = ~/.ghq
